# estrutura-workshop

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
Documentação/: index.html
ETL/: index.html
Preparação do Ambiente/: index.html
app/: main.py
app/pipeline/: __init__.py  extract.py  load.py  transform.py
data/output/: output.xlsx
docs/: Documentação.md  ETL.md  Preparação do Ambiente.md  Prepração do Ambiente.md  index.md
site/: 404.html  index.html  objects.inv
site/Documentação/: index.html
site/ETL/: index.html
site/Preparação do Ambiente/: index.html
tests/: __init__.py  test_pipeline.py
