[tool.poetry]
name = "workshop-01"
version = "0.1.0"
description = "Meu Primeiro Projeto"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
