[tool.poetry]
name = "workshop-01"
version = "0.1.0"
description = "Meu Primeiro Projeto"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
pytest = "^8.1.1"
pydocstyle = "^6.3.0"
taskipy = "^1.12.2"
isort = "^5.13.2"
blue = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]

format = "isort . && blue ."