[tool.poetry]
name = "workshop-01"
version = "0.1.0"
description = "Meu Primeiro Projeto"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
pytest = "^8.1.1"
pydocstyle = "^6.3.0"
taskipy = "^1.12.2"
isort = "^5.13.2"
blue = "^0.9.1"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.9.0"
pygments = "^2.17.2"
mkdocs-material = {extras = ["imaging"], version = "^9.5.13"}
pymdown-extensions = "^10.7.1"
mkdocs-bootstrap386 = "^0.0.2"
mkdocstrings = "^0.24.1"
social = "^0.1.dev3"
mermaid = "^0.3.2"
mdx-truly-sane-lists = "^1.3"
pre-commit = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]

format = "isort . && blue ."